# comp-geometry

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
include/: SDL2  SDL2_image
include/glad/: glad.h
lib/: SDL2  SDL2_image
scripts/: build.sh  build_clang.sh  reset_cmake.sh
shaders/basic/: fragment_shader_other.frag
shaders/basic_colors/: vertex_shader.vert
src/: glad.c  vectors.hpp
src/2D/: polygons.cpp  polygons.hpp  shapes.cpp  shapes.hpp
src/graphics/: graphics.cpp  graphics.hpp
src/math/: geometry.hpp
src/shaders/: README.md
